tests/ui/issues/issue-35139.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-35139.rs:9:6
   |
LL | impl<'a> MethodType for MTFn {
   |      ^^ unconstrained lifetime parameter
   |
help: this use of an otherwise unconstrained lifetime is not allowed
  --> $DIR/issue-35139.rs:10:20
   |
LL |     type GetProp = dyn fmt::Debug + 'a;
   |                    ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
